--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.26.3",
     "mockjs": "^1.1.0",
     "react": "^18.3.1",
+    "react-activation": "^0.13.4",
     "react-dom": "^18.3.1",
     "react-intl": "^7.1.11",
     "react-router-dom": "^6.30.1",
